trying to make better form

--- a/imageinfo/create_imageinfo.html
+++ b/imageinfo/create_imageinfo.html
@@ -1,17 +1,11 @@
-<form action ="add_imageinfo.php" method="post">
+<h1> upload</h1>
 
 
+<form action="add_imageinfo.php" method="post" enctype="multipart/form-data">
 
-    <label>Image:</label>
+    Go on  upload image:
 
-        <input type="image" name="pic" /><p>
-
-
-
-
-
-    <button type ="submit">submit</button>
-    <button type ="button">cancel</button>
-
-
+    <input type="file" name="myfile" ><p>
+    <input type="submit" value="Upload" >
 </form>
+
