--- a/acadamicinfo/create_acadamicinfo.html
+++ b/acadamicinfo/create_acadamicinfo.html
@@ -15,6 +15,15 @@
     <label>group/Subject* :</label>
     <input type ="text" name="group_subject" /><p>
     <label>Institution* :</label>
+    <select type="text" name ="institution">
+        <option value="">college/university</option>
+        <option value="bngla_college">bangla college</option>
+        <option value="Du">Du</option>
+        <option value="khulna_uni">khulna uni</option>
+        <option value="rajshai_uni">rajshai uni</option>
+        <option value="Ju">ju</option>
+        <option value="cuet">cuet</option>
+    </select>
     <input type ="text" name="institution" /><p>
     <label>Result Type* :</label>
     <input type ="text" name="result_type" /><p>
@@ -26,12 +35,14 @@
     <input type ="text" name="passing_year" /><p>
     <label>Duration :</label>
     <input type ="text" name="duration" /><p>
-    <label>Achievement:</label>
-    <input type ="text" name="achievement" /><p>
+   achievement:<p> <textarea cols="50" rows="4" wrap = "virtual" name="achievement">
+
+</textarea> <p>
 
 
 
 <button type ="submit">submit</button>
+    <button type ="button">Cancel</button>
 
 
 </form>
