--- a/acadamicinfo/create_acadamicinfo.html
+++ b/acadamicinfo/create_acadamicinfo.html
@@ -14,18 +14,13 @@
     <input type ="text" name="exam_title" /><p>
     <label>group/Subject* :</label>
     <input type ="text" name="group_subject" /><p>
-    <label>Institution* :</label>
+    <label>Institution :</label>
     <select type="text" name ="institution">
         <option value="">college/university</option>
         <option value="bngla_college">bangla college</option>
         <option value="Du">Du</option>
-        <option value="khulna_uni">khulna uni</option>
-        <option value="rajshai_uni">rajshai uni</option>
-        <option value="Ju">ju</option>
-        <option value="cuet">cuet</option>
-    </select>
-    <input type ="text" name="institution" /><p>
-    <label>Result Type* :</label>
+           </select>
+        <label>Result Type* :</label>
     <input type ="text" name="result_type" /><p>
     <label>Result*:</label>
     <input type ="text" name="result" />
