--- a/employmentinfo/create_employmentinfo.html
+++ b/employmentinfo/create_employmentinfo.html
@@ -1,6 +1,6 @@
 <form action ="add_employmentinfo.php" method="post">
 
-    <h1> Acadamic  information  form</h1>
+    <h1> Employment  information  form</h1>
 
     <label>company name:</label>
     <input type ="text" name="company_name" /><p>
@@ -18,8 +18,10 @@
     <input type ="radio" name="to" /><p>
     <label>employment duration:</label>
     <input type ="text" name="duration" /><p>
-    <label>responsibility:</label>
-    <input type ="text" name="responsibility" /><p>
+    <input type ="text" name="duration" /><p>
+    achievement:<p> <textarea cols="50" rows="4" wrap = "virtual" name="achievement">
+
+</textarea> <p>
 
 
 
