--- a/ictskillinfo/create_ictskillinfo.html
+++ b/ictskillinfo/create_ictskillinfo.html
@@ -2,7 +2,7 @@
 
     <h1> ict skill  information  form</h1>
 
-    <label>experience category:</label>
+    <label>Experience category:</label>
         <select type="text" name ="experience_category">
         <option value="">select </option>
         <option value="eng">eng</option>
@@ -12,12 +12,16 @@
             </select>
     <p>
 
-    <label>skill description:</label>
-    <input type ="text" name="skill_description" /><p>
+
+    skill?*:<p> <textarea cols="50" rows="4" wrap = "virtual" name="skill_description">
+
+</textarea> <p>
 
 
-    <label>Extracurricular activities:</label>
-    <input type ="text" name="extracurricular_activities" /><p>
+    Extracurricular activities:<p> <textarea cols="50" rows="4" wrap = "virtual" name="extracurricular_activities">
+
+</textarea> <p>
+
 
 
 
