--- a/personalinfo/create_personalinfo.html
+++ b/personalinfo/create_personalinfo.html
@@ -1,5 +1,5 @@
 <form action="add_personalinfo.php" method="post">
-    <h1 style="color: navy." align="center" >personal information form</h1>
+    <h1 style="color: navy." align="center" >Personal information form</h1>
 
 
 
@@ -11,6 +11,8 @@
     <input type="text" name="mothersname" /><p>
     <label>Religion:</label>
     <input type="text" name="religion" /><p>
+    <label>Date of birth:</label>
+    <input type="text" name="dateof_birth" /><p>
     <label>Gender:</label>
      <input type="radio" name="gender" value="male">Male
        <input type="radio" name="gender" value="female">Female<p>
