--- a/imageinfo/create_imageinfo.html
+++ b/imageinfo/create_imageinfo.html
@@ -5,7 +5,7 @@
 
     Go on  upload image:
 
-    <input type="file" name="myfile" ><p>
-    <input type="submit" value="Upload" >
+    <input type="file" name="myfile" /><p>
+    <input type="submit" name="submit" value="Upload"/>
 </form>
 
