--- a/referenceinfo/create_referenceinfo.html
+++ b/referenceinfo/create_referenceinfo.html
@@ -2,15 +2,21 @@
 
     <h1> reference information  form</h1>
 
-    <label>Name:</label>
+    <label>Name*:</label>
     <input type ="text" name="Name" /><p>
-        <label>Organization:</label>
+
+        <label>Organization*:</label>
         <input type ="text" name="organization" /><p>
-    <label>address:</label>
-    <input type ="text" name="address" /><p>
 
 
-    <label>relation:</label>
+    Address: <textarea cols="50" rows="4" wrap = "virtual" name="address">
+    </textarea> <p>
+
+
+
+
+
+<label>relation:</label>
     <input type ="text" name="relation" /><p>
 
     <label>phone office:</label>
