--- a/traininginfo/create_traininginfo.html
+++ b/traininginfo/create_traininginfo.html
@@ -4,8 +4,9 @@
 
     <label>training title:</label>
      <input type ="text" name="training_title" /><p>
-    <label>training description:</label>
-    <input type ="text" name="training_description" /><p>
+
+    training description: <textarea cols="50" rows="4" wrap = "virtual" name="training_description">
+    </textarea> <p>
     <label>institute :</label>
     <input type ="text" name="institute" /><p>
     <label>address:</label>
