trying to make better form

--- a/acadamicinfo/create_acadamicinfo.html
+++ b/acadamicinfo/create_acadamicinfo.html
@@ -4,9 +4,9 @@
 
 
     <label>Level of Education:</label>
-        <select type="text" name ="level_of_education">
-        <option value="">subject</option>
-        <option value="diploma">diploma</option>
+        <select name ="level_of_education">
+
+        <option value="diploma" selected>diploma</option>
         <option value="bsc">bsc</option>
         <option value="msc">msc</option>
     </select>
@@ -15,10 +15,11 @@
     <label>group/Subject* :</label>
     <input type ="text" name="group_subject" /><p>
     <label>Institution :</label>
-    <select type="text" name ="institution">
-        <option value="">college/university</option>
-        <option value="bngla_college">bangla college</option>
+    <select name ="institution">
+
+        <option value="bngla_college" selected>bangla college</option>
         <option value="Du">Du</option>
+        <option value="khulna_uni">khulna_uni</option>
            </select>
         <label>Result Type* :</label>
     <input type ="text" name="result_type" /><p>
