--- a/contactinfo/create_contactinfo.html
+++ b/contactinfo/create_contactinfo.html
@@ -7,9 +7,9 @@
     <input type ="text" name="present_address" /><p>
 
     <label> Distric :</label>
-    <select type="text" name ="distric">
+    <select  name ="distric">
         <option value="">select distric</option>
-        <option value="chittagong">chittagong</option>
+        <option value="chittagong" selected>chittagong</option>
         <option value="dhaka">dhaka</option>
         <option value="rajshai">rajshai</option>
         <option value="sylhet">sylhet</option>
