solved comment prob  form

--- a/ictskillinfo/create_ictskillinfo.html
+++ b/ictskillinfo/create_ictskillinfo.html
@@ -18,7 +18,7 @@
 </textarea> <p>
 
 
-    Extracurricular activities:<p> <textarea cols="50" rows="4" wrap = "virtual" name="extracurricular_activities">
+    Extracurricular activities:<p> <textarea cols="50" rows="4" name="extracurricular_activities">
 
 </textarea> <p>
 
