--- a/multi_selection/create_multiselect.html
+++ b/multi_selection/create_multiselect.html
@@ -1,4 +1,4 @@
-<form action="add_multiselect.php" method="post">
+<form action="add1_multiselect.php" method="post">
 
     <h1 style="color: navy." align="center" >multi selection  form</h1>
 
